--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.google.android.gms:play-services:+'
+    compile 'com.google.zxing:core:3.0.0'
+    compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
+    compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
+    compile 'com.google.code.gson:gson:2.3.1'
+    //compile 'com.google.apis:google-api-services-youtube:v3-rev136-1.20.0'
+
 }
